wordpress/wordpress/wordpress.deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:4.9-php5.6-fpm
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html  
          name: html
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: wordpress-data-pvc
