wordpress/wordpress/wordpress.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: wordpress
spec:
  ports:
  - port: 80
    targetPort: 80
    name: web
  selector:
    k8s-app: wordpress
