wordpress/wordpress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress
spec:
  tls:
  - hosts: 
    - blog.gdphdc.com
    secretName: wordpress-ingress-secret 
  rules:
  - host: blog.gdphdc.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-svc
          servicePort: 80
